// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`outlet > _content from current match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      content#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _content from first match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      content#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _content from next match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      next content#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _layout from first match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      layout#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _layout from next match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      next layout#Main
    </div>
  </div>
</div>
`;

exports[`outlet > _void from current match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      void#Main
    </div>
  </div>
</div>
`;

exports[`outlet > named root void 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      void A
    </div>
  </div>
</div>
`;

exports[`outlet > no match 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  />
</div>
`;

exports[`outlet > root void 1`] = `
<div>
  <div
    data-testid="test-wrapper"
  >
    <div>
      void
    </div>
  </div>
</div>
`;
